--- a/GymManagementApi/appsettings.json
+++ b/GymManagementApi/appsettings.json
@@ -9,10 +9,17 @@
   "ConnectionStrings": {
     "ConnectionString": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=GymManagement;Integrated Security=true;TrustServerCertificate=True"
   },
-  "JwtConfig": {
-    "Issuer": "https://localhost:7026/",
-    "Audience": "https://localhost:7026/",
-    "Key": "SecretKey@SecretKey",
-    "TokenValidityMins": 30
+  //"JwtConfig": {
+  //  "Issuer": "https://localhost:7026/",
+  //  "Audience": "https://localhost:7026/",
+  //  "Key": "SecretKey@SecretKey",
+  //  "TokenValidityMins": 30
+  //}
+  "JwtSettings": {
+    "SecretKey": "123456gymmanagementwithdeep123456",
+    "Issuer": "http://localhost:5021",
+    "Audience": "http://localhost:5021",
+    "ExpiryMinutes": 60
   }
+
 }
